--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@ if(countM == 0){
 		<div class="menuItem">FORUM</div>
 		<hr>
 		<div class="copy">
-			&copy; ANGELIC - 2021
+			&copy; ZQQ - 2022
 		</div>
 	</div>
 	<div class="els top">
 	<div class="logo">
-		ANGELIC
+		ZQQ
 	</div>
 	
 	
@@ -450,7 +450,7 @@ WE YOUR ANCESTORS ARE ALWAYS WITH YOU!.
 		</section>
 		<footer>
 			 <div class="copy">
-			&copy; ANGELIC - 2021
+			&copy; ZQQ - 2022
 		</div>
 		</footer>
 	</body>
